# DriveStock

./: .gitignore  README.md
backend/: create_admin.py  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/core/: config.py  database.py  security.py
backend/app/routers/: auth.py  vehicles.py
backend/drivestock_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth_login.py  test_auth_register.py  test_vehicles.py
docs/: documentation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  styles.css
frontend/src/api/: auth.js  client.js  vehicles.js
frontend/src/lib/: auth.js
